tests/fixtures/functional_patterns/negative/n29_tuple_access.rs
fn first_element(tuple: (i32, i32, i32)) -> i32 {
    tuple.0
}
